Still more MD fixes. Fossil's MD dialect doesn't like double quotes in code.

--- a/tip/462.md
+++ b/tip/462.md
@@ -33,7 +33,7 @@ Asynchronous subprocesses can be created using two distinct methods:
 
    * `exec` command with a `&` terminal argument. In this case the command returns immediately with a list of the PIDs for all the subprocesses in the pipeline.
 
-   * `open "| command\"`. In this case the command returns immediately with the channel id of the pipe (hereafter `$ch`). The subprocess IDs are given by the `[pid $ch]` command. The subprocess status code and error conditions are processed upon channel closure with the `[close $ch]`.
+   * `open \"| command\"`. In this case the command returns immediately with the channel id of the pipe (hereafter `$ch`). The subprocess IDs are given by the `[pid $ch]` command. The subprocess status code and error conditions are processed upon channel closure with the `[close $ch]`.
 
 ## Error handling and status code
 
@@ -91,43 +91,41 @@ Additionally, `::tcl::process status` accepts the following switches:
 
 # Examples
 
-```
-% ::tcl::process autopurge
-true
-% ::tcl::process autopurge false
-false
+	% ::tcl::process autopurge
+	true
+	% ::tcl::process autopurge false
+	false
 
-% set pid1 [exec command1 a b c | command2 d e f &]
-123 456
-% set chan [open "|command1 a b c | command2 d e f"]
-file123
-% set pid2 [pid $chan]
-789 1011
+	% set pid1 [exec command1 a b c | command2 d e f &]
+	123 456
+	% set chan [open "|command1 a b c | command2 d e f"]
+	file123
+	% set pid2 [pid $chan]
+	789 1011
 
-% ::tcl::process list
-123 456 789 1011
+	% ::tcl::process list
+	123 456 789 1011
 
-% ::tcl::process status
-123 {CHILDSTATUS 123 0} 456 {CHILDKILLED 456 SIGPIPE "write on pipe with no readers"} 789 {CHILDSUSP 789 SIGTTIN "background tty read"} 1011 {}
+	% ::tcl::process status
+	123 {CHILDSTATUS 123 0} 456 {CHILDKILLED 456 SIGPIPE "write on pipe with no readers"} 789 {CHILDSUSP 789 SIGTTIN "background tty read"} 1011 {}
 
-% ::tcl::process status 123
-123 {CHILDSTATUS 123 0}
+	% ::tcl::process status 123
+	123 {CHILDSTATUS 123 0}
 
-% ::tcl::process status 1011
-1011 {}
+	% ::tcl::process status 1011
+	1011 {}
 
-% ::tcl::process status -wait
-123 {CHILDSTATUS 123 0} 456 {CHILDKILLED 456 SIGPIPE "write on pipe with no readers"} 789 {CHILDSUSP 789 SIGTTIN "background tty read"} 1011 {CHILDSTATUS 1011 -1}
+	% ::tcl::process status -wait
+	123 {CHILDSTATUS 123 0} 456 {CHILDKILLED 456 SIGPIPE "write on pipe with no readers"} 789 {CHILDSUSP 789 SIGTTIN "background tty read"} 1011 {CHILDSTATUS 1011 -1}
 
-% ::tcl::process status 1011
-1011 {CHILDSTATUS 1011 -1}
+	% ::tcl::process status 1011
+	1011 {CHILDSTATUS 1011 -1}
 
-% ::tcl::process purge
-% exec command1 1 2 3 &
-1213
-% ::tcl::process list
-1213
-```
+	% ::tcl::process purge
+	% exec command1 1 2 3 &
+	1213
+	% ::tcl::process list
+	1213
 
 # Rejected Alternatives
 
