Final Markdown fixes. `fossil test-markdown-render` saved my life.

--- a/tip/462.md
+++ b/tip/462.md
@@ -33,7 +33,7 @@ Asynchronous subprocesses can be created using two distinct methods:
 
    * `exec` command with a `&` terminal argument. In this case the command returns immediately with a list of the PIDs for all the subprocesses in the pipeline.
 
-   * `open \"| command\"`. In this case the command returns immediately with the channel id of the pipe (hereafter `$ch`). The subprocess IDs are given by the `[pid $ch]` command. The subprocess status code and error conditions are processed upon channel closure with the `[close $ch]`.
+   * <code>open "\| command"</code>. In this case the command returns immediately with the channel id of the pipe (hereafter `$ch`). The subprocess IDs are given by the `[pid $ch]` command. The subprocess status code and error conditions are processed upon channel closure with the `[close $ch]`.
 
 ## Error handling and status code
 
@@ -61,7 +61,7 @@ The current implementation is lacking several key features:
 
    * Consequently, there is no way to collect the status code of a asychronous subprocess created with the `exec &` method because such commands don't raise errors once the subprocesses are launched.
 
-   * There is no non-blocking way to query asynchronous subprocess status codes; `catch`/`try` upon `open |` pipe closure is blocking.
+   * There is no non-blocking way to query asynchronous subprocess status codes; `catch`/`try` upon <code>open "\| command"</code> pipe closure is blocking.
 
    * Moreover, `exec` and `open` call `Tcl_ReapDetachedProcs`, thereby cleaning up all pending information on terminated subprocesses. This prevents any advanced subprocess monitoring at the script level.
 
@@ -77,17 +77,17 @@ The following _subcommand_ values are supported by `::tcl::process`:
 
    * `::tcl::process list`: Returns the list of subprocess PIDs.
 
-   * `::tcl::process status` _`?switches? ?pids?`_: Returns a dictionary mapping subprocess PIDs to their respective statuses. If _`pids`_ is specified as a list of PIDs then the command only returns the status of the matching subprocesses if they exist, and raises an error otherwise. The status value uses the same format as the `errorCode` global variable for terminated processes; for active processes an empty value is returned. Under the hood this command calls `Tcl_WaitPid` with the `WNOHANG` flag set for non-blocking behavior. 
+   * <code>::tcl::process status <em>?switches? ?pids?</em></code>: Returns a dictionary mapping subprocess PIDs to their respective statuses. If <code><em>pids</em></code> is specified as a list of PIDs then the command only returns the status of the matching subprocesses if they exist, and raises an error otherwise. The status value uses the same format as the `errorCode` global variable for terminated processes; for active processes an empty value is returned. Under the hood this command calls `Tcl_WaitPid` with the `WNOHANG` flag set for non-blocking behavior. 
 
-   * `::tcl::process purge` _`?pids?`_: Cleans up all data associated with terminated subprocesses. If _`pids`_ is specified as a list of PIDs then the command only cleanup data for the matching subprocesses if they exist, and raises an error otherwise. If the process is still active then it does nothing.
+   * <code>::tcl::process purge <em>?pids?</em></code>: Cleans up all data associated with terminated subprocesses. If <code><em>pids</em></code> is specified as a list of PIDs then the command only cleanup data for the matching subprocesses if they exist, and raises an error otherwise. If the process is still active then it does nothing.
 
-   * `::tcl::process autopurge` _`?flag?`_: Automatic purge facility. If _`flag`_ is specified as a boolean value then it activates or deactivate autopurge. In all cases it returns the current status as a boolean value. When autopurge is active, `Tcl_ReapDetachedProcs` is called each time the `exec` command is executed or a pipe channel created by `open` is closed. When autopurge is inactive, `::tcl::process purge` must be called explicitly. By default autopurge is active and replicates the current Tcl behavior.
+   * <code>::tcl::process autopurge <em>?flag?</em></code>: Automatic purge facility. If <code><em>flag</em></code> is specified as a boolean value then it activates or deactivate autopurge. In all cases it returns the current status as a boolean value. When autopurge is active, `Tcl_ReapDetachedProcs` is called each time the `exec` command is executed or a pipe channel created by `open` is closed. When autopurge is inactive, `::tcl::process purge` must be called explicitly. By default autopurge is active and replicates the current Tcl behavior.
 
 Additionally, `::tcl::process status` accepts the following switches:
 
-   * `-wait`: By default the command returns immediately (the underlying `Tcl_WaitPid` is called with the `WNOHANG` flag set) unless this switch is set. If _`pids`_ is specified as a list of PIDs then the command waits until the matching subprocess statuses are available. If _`pids`_ is not specified then it waits for all known subprocesses.
+   * `-wait`: By default the command returns immediately (the underlying `Tcl_WaitPid` is called with the `WNOHANG` flag set) unless this switch is set. If <code><em>pids</em></code> is specified as a list of PIDs then the command waits until the matching subprocess statuses are available. If <code><em>pids</em></code> is not specified then it waits for all known subprocesses.
 
-   * `--`: Marks the end of switches. The argument following this one will be treated as the first arg even if it starts with a -. 
+   * `--`: Marks the end of switches. The argument following this one will be treated as the first arg even if it starts with a `-`. 
 
 # Examples
 
