TIP #462: Updated the [tcl::process status] doc and examples in sync with the actual implementation.

--- a/tip/462.md
+++ b/tip/462.md
@@ -77,7 +77,12 @@ The following _subcommand_ values are supported by `::tcl::process`:
 
    * `::tcl::process list`: Returns the list of subprocess PIDs.
 
-   * <code>::tcl::process status <em>?switches? ?pids?</em></code>: Returns a dictionary mapping subprocess PIDs to their respective statuses. If <code><em>pids</em></code> is specified as a list of PIDs then the command only returns the status of the matching subprocesses if they exist, and raises an error otherwise. The status value uses the same format as the `errorCode` global variable for terminated processes; for active processes an empty value is returned. Under the hood this command calls `Tcl_WaitPid` with the `WNOHANG` flag set for non-blocking behavior. 
+   * <code>::tcl::process status <em>?switches? ?pids?</em></code>: Returns a dictionary mapping subprocess PIDs to their respective statuses. If <code><em>pids</em></code> is specified as a list of PIDs then the command only returns the status of the matching subprocesses if they exist, and raises an error otherwise. For active processes, the status is an empty value. For terminated processes, the status is a list with the following format: <code>{code <em>?msg errorCode?</em>}</code>, where:
+       * `code` is a standard Tcl return code,
+	   * `msg` is the human-readable error message,
+	   * `errorCode` uses the same format as the `::errorCode` global variable.
+
+   > Note that `msg` and `errorCode` are only present for abnormally terminated processes (i.e. those where `code` is nonzero). Under the hood this command calls `Tcl_WaitPid` with the `WNOHANG` flag set for non-blocking behavior, unless the `-wait` switch is set (see below).
 
    * <code>::tcl::process purge <em>?pids?</em></code>: Cleans up all data associated with terminated subprocesses. If <code><em>pids</em></code> is specified as a list of PIDs then the command only cleanup data for the matching subprocesses if they exist, and raises an error otherwise. If the process is still active then it does nothing.
 
@@ -107,19 +112,19 @@ Additionally, `::tcl::process status` accepts the following switches:
 	123 456 789 1011
 
 	% ::tcl::process status
-	123 {CHILDSTATUS 123 0} 456 {CHILDKILLED 456 SIGPIPE "write on pipe with no readers"} 789 {CHILDSUSP 789 SIGTTIN "background tty read"} 1011 {}
+	123 0 456 {1 "child killed: write on pipe with no readers" {CHILDKILLED 456 SIGPIPE "write on pipe with no readers"}} 789 {1 "child suspended: background tty read"} {CHILDSUSP 789 SIGTTIN "background tty read"}} 1011 {}
 
 	% ::tcl::process status 123
-	123 {CHILDSTATUS 123 0}
+	123 0
 
 	% ::tcl::process status 1011
 	1011 {}
 
 	% ::tcl::process status -wait
-	123 {CHILDSTATUS 123 0} 456 {CHILDKILLED 456 SIGPIPE "write on pipe with no readers"} 789 {CHILDSUSP 789 SIGTTIN "background tty read"} 1011 {CHILDSTATUS 1011 -1}
+	123 0 456 {1 "child killed: write on pipe with no readers" {CHILDKILLED 456 SIGPIPE "write on pipe with no readers"}} 789 {1 "child suspended: background tty read" {CHILDSUSP 789 SIGTTIN "background tty read"}} 1011 {1 "child process exited abnormally" {CHILDSTATUS 1011 -1}}
 
 	% ::tcl::process status 1011
-	1011 {CHILDSTATUS 1011 -1}
+	1011 {1 "child process exited abnormally" {CHILDSTATUS 1011 -1}}
 
 	% ::tcl::process purge
 	% exec command1 1 2 3 &
