TIP #462: fixed typo in example

--- a/tip/462.md
+++ b/tip/462.md
@@ -112,7 +112,7 @@ Additionally, `::tcl::process status` accepts the following switches:
 	123 456 789 1011
 
 	% ::tcl::process status
-	123 0 456 {1 "child killed: write on pipe with no readers" {CHILDKILLED 456 SIGPIPE "write on pipe with no readers"}} 789 {1 "child suspended: background tty read"} {CHILDSUSP 789 SIGTTIN "background tty read"}} 1011 {}
+	123 0 456 {1 "child killed: write on pipe with no readers" {CHILDKILLED 456 SIGPIPE "write on pipe with no readers"}} 789 {1 "child suspended: background tty read" {CHILDSUSP 789 SIGTTIN "background tty read"}} 1011 {}
 
 	% ::tcl::process status 123
 	123 0
