New TIP #484: Get rid of the "wideInt" type Add some relevant remarks to TIP #476

--- a/tip/476.md
+++ b/tip/476.md
@@ -74,7 +74,9 @@ This TIP proposes serveral things:
        If your compiler is ISO C99-compatible, you can use "z" resp "t" instead.
 
    *   Add the "a" and "A" type fields, for formatting floats in hex. Conforming
-       to ISO C99, except that the "p" in the output is always lowercase.
+       to ISO C99, except that the "p" in the output is always lowercase. Since
+       hex float format is not an offical Tcl number representation, those type
+       fields will _not_ be added to Tcl's "scan" command.
 
    *   Allow macro's from `<inttypes.h>`, such as `PRId32` and `PRId64`, to be used in
        `Tcl_ObjPrintf()`. All that is needed in Tcl is making the format characters
@@ -86,7 +88,7 @@ This TIP proposes serveral things:
        conformant printf.
 
    *   No longer let the "%llu" format generate an error if the formatted number
-       is positive.
+       is positive. This affects the Tcl "scan" command as well.
 
    *   Add a new "L" length modifier. When used in combination with "f" or "g",
        it allows long doubles to be formatted. Since Tcl doesn't handle long doubles
