TIP #483: Added references to TIPs #59 and #205

--- a/tip/483.md
+++ b/tip/483.md
@@ -10,7 +10,8 @@
 -----
 # Abstract
 
-The TIP #59 implementation for Tk is incomplete.
+Initially implemented in TIP #205 [[205]](205.md), the TIP #59 [[59]](59.md) implementation for Tk is incomplete.
+
 This TIP proposes a more complete TIP #59 implementation for Tk.
 
 # Rationale
