Change the TIP #472 status to final, since the Vote has been done: It was accepted for 8.7. Add the function Tcl_VarEvalVA() to TIP #422: This functions should be removed in Tcl 9.0 as well.

--- a/tip/422.md
+++ b/tip/422.md
@@ -4,7 +4,7 @@
 	Type:           Project
 	Vote:           Pending
 	Created:        02-Jan-2013
-	Post-History:   
+	Post-History:
 	Tcl-Version:    9.0
 	Keywords:	Tcl, API removal, varargs
 -----
@@ -27,7 +27,7 @@ Tcl Core mailing list: <http://code.activestate.com/lists/tcl-core/10807/>
 
 # Specification
 
-This TIP proposes to remove the following 4 functions from the public API
+This TIP proposes to remove the following 5 functions from the public API
 
  * Tcl\_AppendResultVA
 
@@ -35,11 +35,13 @@ This TIP proposes to remove the following 4 functions from the public API
 
  * Tcl\_SetErrorCodeVA
 
+ * Tcl\_VarEvalVA
+
  * Tcl\_PanicVA
 
 In addition, the inclusion of \<stdarg.h\> should move from tcl.h to tclInt.h,
 as no public Tcl header uses it any more.
- 
+
 # Compatibility
 
 Extensions using any of those functions will not compile and run in Tcl 9.0
@@ -81,10 +83,24 @@ Extensions rewritten this way, will continue to compile and function with Tcl
 8.x as well. I am not aware of any extension which actually calls any of those
 VA functions.
 
+For Tcl 8.7, those 5 functions will be marked "deprecated", so any extensions
+still using it will get a compilation warning on compilers that support it.
+For example, if Tcl\_PanicVA is used when compiling with GCC:
+<pre>    warning: 'Tcl\_PanicVA' is deprecated: see TIP #422 [-Wdeprecated-declarations]
+         Tcl\_PanicVA(...)
+         ^~~~~~~~~~~
+</pre>
+And if Tcl 8.7 is compiled with the `-DTCL_NO_DEPREPATED` flag, those 5 functions will
+not be exported as symbols from the dll, and their entries in the stub table will be NULL.
+
 # Reference Implementation
 
-A reference implementation is available in the **novem-remove-va** branch.
-<https://core.tcl.tk/tcl/timeline?r=novem-remove-va> 
+A reference implementation is available in the **tip-422** branch.
+<https://core.tcl.tk/tcl/timeline?r=tip-422>
+
+There is also a **tip-422-for-8** branch, which shows the implementation
+for doing the deprecation in Tcl 8.7.
+<https://core.tcl.tk/tcl/timeline?r=tip-422-for-8>
 
 # Copyright
 
