--- a/tip/472.md
+++ b/tip/472.md
@@ -1,7 +1,7 @@
 # TIP 472: Add Support for 0d Radix Prefix to Integer Literals
 	Author:         Venkat Iyer <venksi@gmail.com>
 	Author:         Brian Griffin <brian_griffin@mentor.com>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        25-May-2017
