Fix spelling and formatting.

--- a/tip/478.md
+++ b/tip/478.md
@@ -1,4 +1,4 @@
-# TIP 478: Add expected class level behaviors to oo::class
+# TIP 478: Add Expected Class Level Behaviors to oo::class
 	Author:         Gerald Lester <Gerald.Lester@gmail.com>
 	State:          Draft
 	Type:           Project
@@ -10,21 +10,21 @@
 -----
 # Abstract
 
-Tcl OO provides a native OO system for Tcl.  This TIP is to enhance it to meet some of the common expectations of people comming in from other languages.
+TclOO provides a native OO system for Tcl.  This TIP is to enhance it to meet some of the common expectations of people coming in from other languages.
 
 # Rationale
 
-Most other OO systems provide for class variables which are accessable and sahred by all members of a class and class methods which only have access to
-class variable and not to instance/object varaiables.  They also provide a way to initialize the class variables.  This TIP seeks to add them into Tcl OO.
+Most other OO systems provide for class variables which are accessible and shared by all members of a class and class methods which only have access to
+class variable and not to instance/object variables.  They also provide a way to initialize the class variables.  This TIP seeks to add them into TclOO.
 
 # Proposal
 
-The proposal is to add some or all of the functionality of oo::util, in particular the classvariable and classmethod.
-Additionally, it is proposed to add an initialise class definition command to all the initialization of class variables.
+The proposal is to add some or all of the functionality of `oo::util`, in particular the `classvariable` and `classmethod`.
+Additionally, it is proposed to add an `initialise` class definition command to all the initialization of class variables.
 
 # Reference Implementation
 
-Reference implementations are mentioned in the proposal section. Additionally, this is a reference implementation for initialise:
+Reference implementations are mentioned in the proposal section. Additionally, this is a reference implementation for `initialise`:
 <pre>
   proc ::oo::define::initialise {body} {
       if {[package vsatisfies [package require Tcl] 8.7]} {
@@ -39,4 +39,3 @@ Reference implementations are mentioned in the proposal section. Additionally, t
 # Copyright
 
 This document has been placed in the public domain.
-
