CFV by JN, closes [clock format 1510920000] (Fri Nov 17 12:00 UTC 2017)

--- a/tip/422.md
+++ b/tip/422.md
@@ -2,7 +2,7 @@
 	Author:         Jan Nijtmans <nijtmans@users.sf.net>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        02-Jan-2013
 	Post-History:
 	Tcl-Version:    9.0
@@ -11,14 +11,14 @@
 
 # Abstract
 
-This TIP proposes to remove all functions which use the _va\_list_ type from
+This TIP proposes to remove all functions which use the `va_list` type from
 the public API, and it describes what extensions using this should do to make
 their extension portable on the mingw-w64 gcc compiler on the AMD64 platform.
 
 # Rationale
 
-The use of _va\_list_ in public API has the problem that different compilers
-have a different implementation of the _va\_list_ structure. The implication
+The use of `va_list` in public API has the problem that different compilers
+have a different implementation of the `va_list` structure. The implication
 of this is that extensions which are compiled with mingw-w64 for the AMD64
 platform, and call any of those functions will fail with a MSVC-compiled Tcl
 core. The reverse fails as well. For a brief description about this problem,
@@ -29,17 +29,17 @@ Tcl Core mailing list: <http://code.activestate.com/lists/tcl-core/10807/>
 
 This TIP proposes to remove the following 5 functions from the public API
 
- * Tcl\_AppendResultVA
+ * `Tcl_AppendResultVA`
 
- * Tcl\_AppendStringsToObjVA
+ * `Tcl_AppendStringsToObjVA`
 
- * Tcl\_SetErrorCodeVA
+ * `Tcl_SetErrorCodeVA`
 
- * Tcl\_VarEvalVA
+ * `Tcl_VarEvalVA`
 
- * Tcl\_PanicVA
+ * `Tcl_PanicVA`
 
-In addition, the inclusion of \<stdarg.h\> should move from tcl.h to tclInt.h,
+In addition, the inclusion of `<stdarg.h>` should move from `tcl.h` to `tclInt.h`,
 as no public Tcl header uses it any more.
 
 # Compatibility
@@ -72,11 +72,11 @@ After:
 	}
 
 The number of args used \(4, in this example\) should be chosen to be the
-maximum number of additional parameters that is used in any "mypanic" call.
+maximum number of additional parameters that is used in any `mypanic()` call.
 Since this function is only ever called from the extensions itself, this can
 be determined easily.
 
-In addition, the extension must do its own inclusion of \<stdarg.h\>, as tcl.h
+In addition, the extension must do its own inclusion of `<stdarg.h>`, as tcl.h
 doesn't do that any more.
 
 Extensions rewritten this way, will continue to compile and function with Tcl
@@ -85,22 +85,21 @@ VA functions.
 
 For Tcl 8.7, those 5 functions will be marked "deprecated", so any extensions
 still using it will get a compilation warning on compilers that support it.
-For example, if Tcl\_PanicVA is used when compiling with GCC:
-<pre>    warning: 'Tcl\_PanicVA' is deprecated: see TIP #422 [-Wdeprecated-declarations]
-         Tcl\_PanicVA(...)
-         ^~~~~~~~~~~
-</pre>
+For example, if `Tcl_PanicVA` is used when compiling with GCC:
+
+	warning: 'Tcl_PanicVA' is deprecated: see TIP #422 [-Wdeprecated-declarations]
+	     Tcl_PanicVA(...)
+	     ^~~~~~~~~~~
+
 And if Tcl 8.7 is compiled with the `-DTCL_NO_DEPREPATED` flag, those 5 functions will
-not be exported as symbols from the dll, and their entries in the stub table will be NULL.
+not be exported as symbols from the DLL, and their entries in the stub table will be NULL.
 
 # Reference Implementation
 
-A reference implementation is available in the **tip-422** branch.
-<https://core.tcl.tk/tcl/timeline?r=tip-422>
+A reference implementation is available in the [tip-422](https://core.tcl.tk/tcl/timeline?r=tip-422) branch.
 
-There is also a **tip-422-for-8** branch, which shows the implementation
+There is also a [tip-422-for-8](https://core.tcl.tk/tcl/timeline?r=tip-422-for-8) branch, which shows the implementation
 for doing the deprecation in Tcl 8.7.
-<https://core.tcl.tk/tcl/timeline?r=tip-422-for-8>
 
 # Copyright
 
