Change TIP #477 to a Project TIP for Tcl 8.7

--- a/tip/477.md
+++ b/tip/477.md
@@ -1,11 +1,12 @@
 # TIP 477: Modernize the nmake build system
 	Author:         Ashok P. Nadkarni <apnmbx-wits@yahoo.com>
 	State:          Draft
-	Type:           Process
+	Type:           Project
 	Vote:           Pending
 	Created:        30-Sep-2017
 	Post-History:   
 	Keywords:       Windows nmake build
+	Tcl-Version:    8.7
 -----
 <!-- TOC BEGIN -->
 * <a href='#toc-2'>Abstract</a>
@@ -84,13 +85,13 @@ The current nmake-based build system is based on three files in the
 
 * `makefile.vc` is the master makefile for the project
 
-* `rules.mk` is included by makefile.vc and contains the common
+* `rules.vc` is included by makefile.vc and contains the common
 nmake macro definitions and parsing of configuration options shared
 by all projects.
 
 * `nmakehlp.c` is a helper application that strives to overcome
 the extremely primitive functionality of `nmake`. It is invoked from
-rules.mk to check for supported compiler options, simple string
+rules.vc to check for supported compiler options, simple string
 parsing etc.
 
 As currently implemented, the system has several drawbacks including
@@ -130,7 +131,7 @@ customizable using standard "building block" macros.
 
 ## <a id='toc-5'></a>Ensuring consistency
 
-In principle, `rules.mk` and `nmakehlp.c` should be shared across Tcl,
+In principle, `rules.vc` and `nmakehlp.c` should be shared across Tcl,
 Tk and all extensions. In practice, each has its own copy leading to
 divergence between the various copies and the resulting maintenance
 headaches. At the time of writing, 
